<resources>
    <string name="app_name">JustEating</string>
    <string name="explore_tab">Explore</string>
    <string name="home_tab">Search</string>
    <string name="favourites_tab">Favourites</string>
    <string name="camera_tab">Photo</string>

    <string name="sample">sample</string>

    <string name="sort_text">Sort</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="searchByLocation">Or search by current location</string>

    <string name="faveButtonAdd">Add to favourites</string>
    <string name="faveButtonRemove">Remove from favourites</string>

    <string name="location_request">The application is about to request access to your location.</string>

    <string name="noAddress">No address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="businessTypeSelect">Business type&#8230;</string>
    <string name="regionSelect">Region&#8230;</string>
    <string name="authoritySelect">Authority&#8230;</string>
    <string name="ratingSelect">Hygiene rating&#8230;</string>

    <string name="r0">0</string>
    <string name="r1">1</string>
    <string name="r2">2</string>
    <string name="r3">3</string>
    <string name="r4">4</string>
    <string name="r5">5</string>

    <string name="rate0Desc">URGENT IMPROVEMENT NECESSARY</string>
    <string name="rate1Desc">MAJOR IMPROVEMENT NECESSARY</string>
    <string name="rate2Desc">IMPROVEMENT NECESSARY</string>
    <string name="rate3Desc">GENERALLY SATISFACTORY</string>
    <string name="rate4Desc">GOOD</string>
    <string name="rate5Desc">VERY GOOD</string>

    <string name="noResults">No establishments found :(</string>
    <string name="noFavourites">You don\'t have any favourites currently - add some using the star buttons!</string>

    <string name="shareImageText">Share image to &#8230;</string>

</resources>
